[package]
name = "PIjN_microservice_server_template"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
serde_json = "1.0"
sysinfo = "0.35.1" 
tokio = { version = "1.38", features = ["time"] }


